--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -18,4 +18,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true" />
 
+    <Button
+        android:id="@+id/btn_bluetooth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/menu_qrcode"
+        android:layout_centerHorizontal="true"
+        android:text="蓝牙传输" />
+
 </RelativeLayout>
